# ggml

./: .gitignore  .gitmessage.txt  CLAUDE.md
docs/: ggml.drawio  大模型生态架构图.drawio
examples/: common.cpp  common.h
examples/gpt-2/: README.md  main-ctx.cpp
examples/simple/: CMakeLists.txt  benchmark.c  benchmark.cpp  simple-backend.cpp  simple-demo.cpp
include/: ggml-alloc.h  ggml-backend.h  ggml.h
src/: ggml-alloc.c  ggml-backend-impl.h  ggml-backend.cpp  ggml.c
src/ggml-blas/: ggml-blas.cpp
src/ggml-cpu/: ggml-cpu.c  vec.cpp
